# powerpuff-notes

./: LICENSE  Makefile  README.md  pyproject.toml
backend/: app.yaml  main.py  requirements.txt
backend/app/: admin.py  models.py  views.py
backend/notes/: settings.py  urls.py
backend/templates/: base.html
backend/templates/app/: home.html
doc/: architecture.md  developer.md
doc/adr/: 001-storing-data.md
