[tool.poetry]
name = "powerpuff-notes"
version = "0.1.0"
description = "Powerpuff Notes is cloud notes app with special powers."
authors = ["Hubert Rutkowski"]
license = "MIT"
readme = "README.md"
packages = [{include = "powerpuff_notes"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
